fix: :bug: Fixed bug from projects page
Fixed bug from projects page (everything used to look out of place on mobile) and added menu with macros

--- a/app/static/styles/projects.css
+++ b/app/static/styles/projects.css
@@ -6,8 +6,6 @@ body {
   height: 100%;
   width: 100%;
 
-  min-height: 100vh;
-
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -81,7 +79,10 @@ body {
 
   -webkit-box-shadow: 5px 5px 15px 5px rgba(96,65,146,0.55), -12px -1px 24px 0px rgba(55,63,133,0.55), -12px -1px 24px 0px rgba(55,63,133,0.55); 
   box-shadow: 5px 5px 15px 5px rgba(96,65,146,0.55), -12px -1px 24px 0px rgba(55,63,133,0.55), -12px -1px 24px 0px rgba(55,63,133,0.55);
+}
 
+.modal:focus {
+  outline: none;
 }
 
 .modal::backdrop {
@@ -133,13 +134,15 @@ body {
 
 .projects-wrapper h1 {
   font-family: 'Gemunu Libre', sans-serif;
-  font-size: 6rem;
-  font-weight: 300;
-  color: #fff;
-  text-align: start;
-  margin-top: 3rem;
-  margin-bottom: 1rem;
-  padding: 1rem;
+  color: white;
+  text-align: center;
+  font-size: 8rem;
+  margin: 4rem 0 0 0;
+  width: fit-content;
+  right: 0;
+  left: 0;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .projects-container ul {
@@ -171,42 +174,6 @@ body {
   margin: 0;
 }
 
-.glowing-orbs-b {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: -100%;
-  margin: auto;
-  z-index: -2;
-}
-
-.orb-b {
-  position: absolute;
-  width: 18rem;
-  height: 18rem;
-  border-radius: 50%;
-  filter: blur(80px);
-  transform: translateZ(0);
-  bottom: 0;
-}
-
-.blue-orb-b {
-  right: 0;
-  background-color: #373F85;
-  animation: 3s linear .1s alternate blue-orb-movement;
-  animation-direction: alternate;
-  animation-iteration-count: infinite;
-}
-
-.purple-orb-b {
-  left: 50%;
-  background-color: #604192;
-  animation: 3s linear .1s alternate purple-orb-movement;
-  animation-direction: alternate;
-  animation-iteration-count: infinite;
-  animation-delay: 2s;
-}
 
 @media screen and (max-width: 980px) {
   .projects-container img {
@@ -224,9 +191,33 @@ body {
     margin: 0 1rem;
   }
 
-  .projects-container img {
-    max-width: 400px;
+  .projects-container li {
+    margin: 1rem 2rem;
   }
+
+  .projects-wrapper h1 {
+    font-size: 6rem;
+    margin-top: 6rem;
+    margin-bottom: 2rem;
+  }
+
+  .projects-container img {
+    max-width: 100%;
+  }
+
+  .modal {
+    width: 80%;
+  }
+
+  .modal-img {
+    width: 80%;
+    object-fit: cover;
+    border-radius: 1rem;
+    margin: auto;
+    display: block;
+  }
+
+
 }
 
 @keyframes blue-orb-movement {
@@ -254,48 +245,5 @@ body {
     bottom: 2rem;
   } 100% {
     bottom: 0rem;
-  }
-}
-
-@keyframes blue-orb-movement-b {
-  0% {
-    bottom: 3rem;
-    right: 3rem;
-    left: 8rem;
-  } 25% {
-    bottom: 4rem;
-    right: 4rem;
-    left: 11rem;
-  } 50% {
-    bottom: 3rem;
-    right: 5rem;
-    left: 14rem;
-  } 75% {
-    bottom: 2rem;
-    right: 6rem;
-    left: 16rem;
-  } 100% {
-    bottom: 0rem;
-    right: 7rem;
-    left: 18rem;
-  }
-}
-
-@keyframes purple-orb-movement-b {
-  0% {
-    bottom: 3rem;
-    right: 8rem;
-  } 25% {
-    bottom: 4rem;
-    right: 11rem;
-  } 50% {
-    bottom: 3rem;
-    right: 15rem;
-  } 75% {
-    bottom: 2rem;
-    right: 16rem;
-  } 100% {
-    bottom: 0rem;
-    right: 18rem;
   }
 }
